# Pac-ManFP

./: README.md  pacman.cabal
.stack-work/: stack.sqlite3
src/: Main.hs  PacParser.hs  Types.hs
