name:                pacman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pacman#readme
license:             BSD3
license-file:        LICENSE
author:              Fede Brg
maintainer:          example@example.com
copyright:           2020 FB
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pacman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , gloss
                       , containers
                       , random
                       , mtl
                       , MonadRandom
  other-modules:       PacParser
                       , Types